# speech

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
speech/: __init__.py
speech/__pyinstaller/: hook-speech.py
speech/__pyinstaller__/: __init__.py
speech/outputs/: __init__.py  auto.py  base.py  jaws.py  nvda.py  sapi4.py  sapi5.py
