[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech"
version = "0.1.0"
description = "This module generates text-to-speech strings optimized for compatibility with a variety of screen reader software."
authors = [
    { name = "ACT Laboratory", email = "support@actlab.org" }
]
dependencies = [
    "pywin32",
    "pyperclip"
]
requires-python = ">=3.8,<3.13"

[tool.setuptools]
packages = ["speech"]

[tool.autopep8]
aggressive = 2
ignore = ["E402", "E721"]
max-line-length = 150
in-place = true
recursive = true
exclude = "venv"

[project.urls]
Homepage = "https://github.com/actlaboratory/speech"
Repository = "https://github.com/actlaboratory/speech"
